# rubiks_cube_localization

./: .cproject  .gitignore  .project  README  rkl.conf  rkl.conf.webcam
doc/: sprawozdanie.tex
src/: CMakeLists.txt  ColorClassifier.cpp  ColorClassifier.h  ColorDefinition.cpp  ColorDefinition.h  FileSource.cpp  FileSource.h  HLSColorDefinition.cpp  HLSColorDefinition.h  HSVColorDefinition.cpp  HSVColorDefinition.h  ImageSource.cpp  ImageSource.h  OpenCvVideoCaptureSource.cpp  OpenCvVideoCaptureSource.h  RKLConfig.cpp  RKLConfig.h  RKPattern.cpp  RKPattern.h  RKWall.cpp  RKWall.h  RubiksCubeLocalizator.cpp  RubiksCubeLocalizator.h  Segment.cpp  Segment.h  SegmentFilter.cpp  SegmentFilter.h  Segmentation.cpp  Segmentation.h  ShapeFilter.cpp  ShapeFilter.h  SizeFilter.cpp  SizeFilter.h  V4L2.cpp  V4L2.h  YCrCbColorDefinition.cpp  YCrCbColorDefinition.h  logger.cpp  logger.h  main.cpp
